fix(hero): fix mobile responsive layout
On xs/sm the hero image is position:static (in normal flow above the text).
The old code still had padding-top:120px on the section which created a
large empty area before the image, and margin-top:0 on xs conflicted
with the 76px fixed header.

Fixes:
- xs: margin-top:76px (sit below fixed header), padding-top:0
- sm: padding-top:0, min-height:auto (no forced tall section)
- md/lg: keep min-height:980px + padding-top:150px (desktop layout)
- xs container: padding-top:32px to space text from image
- xs/sm image height: 240/280px (was 300/400px, too tall on small screens)
- xs/sm image margin-bottom:0 (spacing now handled by container padding)

--- a/source/_assets/scss/_hero.scss
+++ b/source/_assets/scss/_hero.scss
@@ -36,6 +36,7 @@
     .container {
       padding-left: 24px;
       padding-right: 24px;
+      padding-top: 32px;
     }
   }
 
@@ -51,13 +52,19 @@
   }
 
   @media #{$xs} {
-    margin-top: 0;
-    padding-top: 120px;
-    padding-bottom: 72px;
+    margin-top: 76px;
+    padding-top: 0;
+    padding-bottom: 48px;
     min-height: auto;
   }
 
-  @media #{$sm, $md, $lg} {
+  @media #{$sm} {
+    min-height: auto;
+    padding-top: 0;
+    padding-bottom: 64px;
+  }
+
+  @media #{$md, $lg} {
     min-height: 980px;
     padding-top: 150px;
   }
@@ -87,12 +94,12 @@
 
     @media #{$xs, $sm} {
       position: static;
-      height: 400px;
-      margin-bottom: 30px;
+      height: 280px;
+      margin-bottom: 0;
     }
 
     @media #{$xs} {
-      height: 300px;
+      height: 240px;
     }
 
     .shape {
